--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <div class="login-div">Sign in</div>
         <div class="login-div"><input class="login-input" type="text" id="id" placeholder="ID"></div>
         <div class="login-div"><input class="login-input" type="password" id="pw" placeholder="Password"></div>
-        <div style="padding: 0px; color: red; display: none" id="warning_msg">Wrong ID or password</div>
+        <div class="login-div" style="padding: 2px; color: red; display: none" id="warning_msg">Wrong ID or Password</div>
         <div class="login-div"><button class="btn btn-default login-input" id="loginBtn">Login</button></div>
         <div class="login-div" style="padding: 2px"><a href="./forgotpassword.html">Forgot password?</a></div>
         <div class="login-div" style="padding: 2px">Don't have an account? <a href="./signup.html">Sign up here</a></div>
