--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
       <div class="modal-content" style="width: 340px; height: 500px">
         <span class="close">&times;</span>
         <div class="login-div" style="font-family: 'Amita'; font-size: 24px; padding: 30px">Welcome to Melodize</div>
-        <div class="login-div">Sign in</div>
+        <div class="login-div" style="font-family: 'Amita'">Sign in</div>
         <div class="login-div"><input class="login-input" type="text" id="id" placeholder="ID"></div>
         <div class="login-div"><input class="login-input" type="password" id="pw" placeholder="Password"></div>
         <div class="login-div" style="padding: 2px; color: red; display: none" id="warning_msg">Wrong ID or Password</div>
