--- a/signup.html
+++ b/signup.html
@@ -19,6 +19,19 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
+    <div>
+      <div style="margin: 0 auto; width: 60%;">
+        <div class="login-div" style="font-family: 'Amita'; font-size: 24px; padding: 30px">Sign up</div>
+        <div class="login-div"><input class="login-input" type="text" id="signupId" placeholder="New ID"></div>
+        <div class="login-div" style="padding: 2px; color: red; display: none" id="idDuplicate">ID already exists!</div>
+        <div class="login-div"><input class="login-input" type="text" id="signupEmail" placeholder="Email"></div>
+        <div class="login-div"><input class="login-input" type="password" id="signupPw1" placeholder="Password"></div>
+        <div class="login-div"><input class="login-input" type="password" id="signupPw2" placeholder="Retype Password"></div>
+        <div class="login-div" style="padding: 2px; color: red; display: none" id="passwordError">Type the password again</div>
+        <div class="login-div"><button class="btn btn-default login-input" id="register">Register</button></div>
+      </div>
+    </div>
+
     <div id="loginModal" class="modal">
       <div class="modal-content" style="width: 340px; height: 500px">
         <span class="close">&times;</span>
@@ -35,6 +48,7 @@
 
     <script src="scripts/jquery/js/jquery-1.9.0.min.js"></script>
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
+    <script src="scripts/signup.js"></script>
     <script src="scripts/login.js"></script>
   </body>
 </html>
