--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
   <body>
     <ul class="nav-ul">
       <li class="nav-li"><div style="font-family: 'Amita'; float: left; font-size: 20px; padding: 10px;">Melodize</div></li>
-      <li class="nav-li"><a id="loginTab">Login</a></li>
+      <li class="nav-li"><a id="loginTab">Sign In</a></li>
       <li class="nav-li"><a href="./profile.html">Profile</a></li>
       <li class="nav-li"><a href="./gallery.html">Gallery</a></li>
       <li class="nav-li"><a href="./index.html">Home</a></li>
@@ -22,12 +22,11 @@
     <div id="loginModal" class="modal">
       <div class="modal-content" style="width: 340px; height: 500px">
         <span class="close">&times;</span>
-        <div class="login-div" style="font-family: 'Amita'; font-size: 24px; padding: 30px">Welcome to Melodize</div>
-        <div class="login-div" style="font-family: 'Amita'">Sign in</div>
+        <div class="login-div" style="font-family: 'Amita'; font-size: 24px; padding: 40px">Welcome to Melodize</div>
         <div class="login-div"><input class="login-input" type="text" id="id" placeholder="ID"></div>
         <div class="login-div"><input class="login-input" type="password" id="pw" placeholder="Password"></div>
         <div class="login-div" style="padding: 2px; color: red; display: none" id="warning_msg">Wrong ID or Password</div>
-        <div class="login-div"><button class="btn btn-default login-input" id="loginBtn">Login</button></div>
+        <div class="login-div"><button class="btn btn-default login-input" id="loginBtn">Sign in</button></div>
         <div class="login-div" style="padding: 2px"><a href="./forgotpassword.html">Forgot password?</a></div>
         <div class="login-div" style="padding: 2px">Don't have an account? <a href="./signup.html">Sign up here</a></div>
       </div>
