--- a/songInfo.html
+++ b/songInfo.html
@@ -18,6 +18,24 @@
       <li class="nav-li"><a href="./gallery.html">Gallery</a></li>
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
+
+    <div style="font-size: 24px; padding: 14px">
+      <div class="col-md-4">
+        <img style="width: 100%" src="./img/default-cover-art.png">
+        <div>Title</div>
+        <div>Description</div>
+        <div>Instrument</div>
+        <div>Participants</div>
+      </div>
+      <div class="col-md-4">
+        <div>Preview</div>
+        <div>Top 3 Contributors</div>
+        <button style="width: 300px" class="btn btn-default">Participate</button>
+      </div>
+      <div class="col-md-4">
+        Song lists
+      </div>
+    </div>
  
     <div id="loginModal" class="modal">
       <div class="modal-content" style="width: 340px; height: 500px">
