--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Melodize - Be a Composer!</title>
     <link href="scripts/jquery/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet"/>
+    <link href="css/projects.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
   </head>
@@ -19,6 +20,21 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
  
+    <div style="padding: 30px">
+      <table class = "projList" style="width: 100%">
+        <tr>
+          <th style="width: 10%"></th>
+          <th style="width: 40%">Title</th>
+          <th style="width: 15%">Participants no.</th>
+          <th style="width: 20%">Genre</th>
+          <th style="width: 15%">Completion %</th>
+        </tr>
+        <tr id = "projectList">
+          
+        </tr>
+      </table>
+    </div>
+
     <div id="loginModal" class="modal">
       <div class="modal-content" style="width: 340px; height: 500px">
         <span class="close">&times;</span>
