--- a/request.html
+++ b/request.html
@@ -8,13 +8,14 @@
     <link href="css/general.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
+    <style type="text/css">textarea{width: 100%}</style>
   </head>
 
   <body>
     <ul class="nav-ul">
       <li class="nav-li"><div style="font-family: 'Amita'; float: left; font-size: 20px; padding: 10px;">Melodize</div></li>
       <li class="nav-li"><a id="loginTab">Sign In</a></li>
-      <li class="nav-li"><a href="./profile.html">Profile</a></li>
+      <li class="nav-li"><a id="profileTab" href="./profile.html" style="display: none">Profile</a></li>
       <li class="nav-li"><a href="./gallery.html">Gallery</a></li>
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
@@ -22,7 +23,7 @@
     <div style="padding: 14px; font-size: 18px">
       <div class="col-sm-4">
         <h3>1. Enter your lyrics.</h3>
-        <textarea rows=20 cols=30 placeholder="Your lyrics here"></textarea>
+        <textarea rows=20 placeholder="Your lyrics here"></textarea>
       </div>
       <div class="col-sm-4">
         <div style="padding-bottom: 20px">
@@ -35,26 +36,33 @@
           </form>
         </div>
         <div style="padding-bottom: 20px">
-          <h3>3. Preferred mood/tone</h3>
-          <input type="textarea" style="width: 80%" placeholder="Describe the song you want">
+          <h3>3. Album cover</h3>
+          <input type="textarea" style="width: 80%" placeholder="Provide the URL of the image">
+          <div id="cover-preview" style="width: 80%">
+            <img style="width: 100%" src="./img/default-cover-art.png">
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div style="padding-bottom: 20px">
-          <h3>3. Title</h3>
+          <h3>4. Title</h3>
           <input type="textarea" style="width: 80%;" placeholder="Your song title">
         </div>
         <div style="padding-bottom: 20px">
-          <h3>4. Description</h3>
+          <h3>5. Description</h3>
           <input type="textarea" style="width: 80%" placeholder="Describe your purpose, intuition, etc.">
         </div>
         <div style="padding-bottom: 20px">
-          <h3>5. Setting</h3>
+          <h3>6. Preferred mood/tone</h3>
+          <input type="textarea" style="width: 80%" placeholder="Describe the song you want">
+        </div>
+        <div style="padding-bottom: 20px">
+          <h3>7. Setting</h3>
           <form>
             <input type="radio" name="Settings" checked> Public<br>
             <input type="radio" name="Settings"> Private <input type="textarea" placeholder="Password"><br>
           </form><br>
-          <button class="btn btn-success" style="width: 80%;" id="requestSubmit">Submit</button>
+          <button class="btn btn-success" style="width: 80%; font-size: 18px" id="requestSubmit">Submit</button>
         </div>
       </div>
     </div>
