--- a/songInfo.html
+++ b/songInfo.html
@@ -14,7 +14,7 @@
     <ul class="nav-ul">
       <li class="nav-li"><div style="font-family: 'Amita'; float: left; font-size: 20px; padding: 10px;">Melodize</div></li>
       <li class="nav-li"><a id="loginTab">Sign In</a></li>
-      <li class="nav-li"><a href="./profile.html">Profile</a></li>
+      <li class="nav-li"><a id="profileTab" href="./profile.html" style="display: none">Profile</a></li>
       <li class="nav-li"><a href="./gallery.html">Gallery</a></li>
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
