--- a/request.html
+++ b/request.html
@@ -8,7 +8,6 @@
     <link href="css/general.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
-    <style type="text/css">textarea{width: 100%}</style>
   </head>
 
   <body>
@@ -21,48 +20,49 @@
     </ul>
  
     <div style="padding: 14px; font-size: 18px">
-      <div class="col-sm-4">
+      <div class="col-sm-4" id="lyricsFeedback">
         <h3>1. Enter your lyrics.</h3>
-        <textarea rows=20 placeholder="Your lyrics here"></textarea>
+        <textarea class="form-control" style="width: 100%" rows=25 placeholder="Your lyrics here" id="lyrics"></textarea>
       </div>
       <div class="col-sm-4">
         <div style="padding-bottom: 20px">
           <h3>2. Select the instrument.</h3>
-          <form>
-            <input type="radio" name="instrument" checked> Piano<br>
-            <input type="radio" name="instrument"> Violin<br>
-            <input type="radio" name="instrument"> Flute<br>
-            <input type="radio" name="instrument"> Guitar<br>
+          <form id="instrument">
+            <input type="radio" name="instrument" value="piano" checked> Piano<br>
+            <input type="radio" name="instrument" value="piano"> Violin<br>
+            <input type="radio" name="instrument" value="piano"> Flute<br>
+            <input type="radio" name="instrument" value="piano"> Guitar<br>
           </form>
         </div>
         <div style="padding-bottom: 20px">
           <h3>3. Album cover</h3>
-          <input type="textarea" style="width: 80%" placeholder="Provide the URL of the image">
-          <div id="cover-preview" style="width: 80%">
-            <img style="width: 100%" src="./img/default-cover-art.png">
+          <input class="form-control" type="textarea" style="width: 80%" id="imgURL" placeholder="Provide the URL of the image">
+          <div style="width: 80%">
+            <img id="cover-preview" style="width: 100%" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
           </div>
         </div>
       </div>
       <div class="col-sm-4">
-        <div style="padding-bottom: 20px">
+        <div style="padding-bottom: 20px" id="titleFeedback">
           <h3>4. Title</h3>
-          <input type="textarea" style="width: 80%;" placeholder="Your song title">
+          <input class="form-control" id="title" type="textarea" style="width: 80%;" placeholder="Your song title">
         </div>
-        <div style="padding-bottom: 20px">
+        <div style="padding-bottom: 20px" id="descriptionFeedback">
           <h3>5. Description</h3>
-          <input type="textarea" style="width: 80%" placeholder="Describe your purpose, intuition, etc.">
+          <input class="form-control" id="description" type="textarea" style="width: 80%" placeholder="Describe your purpose, intuition, etc.">
         </div>
         <div style="padding-bottom: 20px">
           <h3>6. Preferred mood/tone</h3>
-          <input type="textarea" style="width: 80%" placeholder="Describe the song you want">
+          <input class="form-control" id="preferrence" type="textarea" style="width: 80%" placeholder="Describe the song you want">
         </div>
         <div style="padding-bottom: 20px">
           <h3>7. Setting</h3>
-          <form>
-            <input type="radio" name="Settings" checked> Public<br>
-            <input type="radio" name="Settings"> Private <input type="textarea" placeholder="Password"><br>
+          <form id="setting">
+            <input type="radio" name="Settings" value="public" checked> Public<br>
+            <input type="radio" name="Settings" value="private"> Private <div id="settingFeedback"><input style="width: 80%" class="form-control" id="privatePW" type="textarea" placeholder="Password"></div><br>
           </form><br>
           <button class="btn btn-success" style="width: 80%; font-size: 18px" id="requestSubmit">Submit</button>
+          <div class="login-div" style="padding: 2px; color: red; display: none" id="field_msg">Please fill the required fields</div>
         </div>
       </div>
     </div>
@@ -84,5 +84,6 @@
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
+    <script src="scripts/request.js"></script>
   </body>
 </html>
