--- a/songInfo.html
+++ b/songInfo.html
@@ -19,21 +19,29 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-    <div style="font-size: 24px; padding: 14px">
+    <div style="padding: 14px">
       <div class="col-md-4">
-        <img style="width: 100%" src="./img/default-cover-art.png">
-        <div>Title</div>
-        <div>Description</div>
-        <div>Instrument</div>
-        <div>Participants</div>
+        <img id="albumCover" style="width: 100%" src="./img/default-cover-art.png">
+        <div style="padding-top: 14px; padding-bottom: 14px">
+          <div id="titleInfo" style="font-size: 24px;">Title</div>
+          <div id="descriptionInfo">Description</div>
+        </div>
+        <div id="instrumentInfo">Instrument</div>
+        <div id="preferrenceInfo">Preferrence</div>
+        <div id="participantsInfo">Participants</div>
       </div>
       <div class="col-md-4">
         <div>Preview</div>
         <div>Top 3 Contributors</div>
-        <button style="width: 300px" class="btn btn-default">Participate</button>
+        <div>
+          <div style="font-size: 24px">Lyric</div>
+          <div id="lyricBox" style="padding: 8px; border: solid 1px; width: 80%; height: 400px; overflow: auto;"></div>
+        </div>
+        <button style="width: 80%" class="btn btn-default">Participate</button>
       </div>
       <div class="col-md-4">
-        Song lists
+        Song List
+        <div id="songList" style="border: solid 1px; width: 100%; height: 500px; overflow: auto"></div>
       </div>
     </div>
  
@@ -54,5 +62,6 @@
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
+    <script src="scripts/songInfo.js"></script>
   </body>
 </html>
