--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Boogaloo' rel='stylesheet'>
   </head>
 
-  <body>
+  <body background="./img/index.png">
     <ul class="nav-ul">
       <li class="nav-li"><div style="font-family: 'Amita'; float: left; font-size: 20px; padding: 10px;">Melodize</div></li>
       <li class="nav-li"><a id="loginTab">Sign In</a></li>
@@ -20,7 +20,6 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-		<img style="position: absolute; height: 92%; opacity: 0.4; z-index: -1" src="./img/index.png">
     <div style="font-size: 20px; text-align: center; font-family: 'Boogaloo'; padding: 14px">
 	    <div style="padding: 14px">
 	    	<div class="container" style="font-family: 'Boogaloo';">
