--- a/songInfo.html
+++ b/songInfo.html
@@ -21,7 +21,7 @@
 
     <div style="padding: 14px">
       <div class="col-md-4">
-        <img id="albumCover" style="width: 100%" src="./img/default-cover-art.png">
+        <img id="albumCover" style="width: 100%" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
         <div style="padding-top: 14px; padding-bottom: 14px">
           <div id="titleInfo" style="font-size: 24px;">Title</div>
           <div id="descriptionInfo">Description</div>
@@ -31,8 +31,8 @@
         <div id="participantsInfo">Participants</div>
       </div>
       <div class="col-md-4">
-        <div>Preview</div>
-        <div>Top 3 Contributors</div>
+        <div style="font-size: 24px">Preview</div>
+        <div style="font-size: 24px">Top 3 Contributors</div>
         <div>
           <div style="font-size: 24px">Lyric</div>
           <div id="lyricBox" style="padding: 8px; border: solid 1px; width: 80%; height: 400px; overflow: auto;"></div>
@@ -40,7 +40,7 @@
         <button style="width: 80%" class="btn btn-default">Participate</button>
       </div>
       <div class="col-md-4">
-        Song List
+        <div style="font-size: 24px">Song List</div>
         <div id="songList" style="border: solid 1px; width: 100%; height: 500px; overflow: auto"></div>
       </div>
     </div>
