--- a/songInfo.html
+++ b/songInfo.html
@@ -21,7 +21,8 @@
 
     <div style="padding: 14px">
       <div class="col-md-4">
-        <img id="albumCover" style="width: 100%" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
+        <div style="padding: 14px">
+        <img id="albumCover" style="width: 100%; object-fit: cover;" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
         <div style="padding-top: 14px; padding-bottom: 14px">
           <div id="titleInfo" style="font-size: 24px;">Title</div>
           <div id="descriptionInfo">Description</div>
@@ -29,15 +30,28 @@
         <div id="instrumentInfo">Instrument</div>
         <div id="preferrenceInfo">Preferrence</div>
         <div id="participantsInfo">Participants</div>
+        </div>
       </div>
       <div class="col-md-4">
-        <div style="font-size: 24px">Preview</div>
-        <div style="font-size: 24px">Top 3 Contributors</div>
-        <div>
-          <div style="font-size: 24px">Lyric</div>
-          <div id="lyricBox" style="padding: 8px; border: solid 1px; width: 80%; height: 400px; overflow: auto;"></div>
+        <div style="padding-bottom: 14px">
+          <div style="font-size: 24px">Preview</div>
+          <button>&#9658</button>
+          <button>&#10073&#10073</button>
+          <button>&#9726</button> (00:50 sec)
         </div>
-        <button style="width: 80%" class="btn btn-default">Participate</button>
+        <div>
+          <div style="font-size: 24px">Top 3 Contributors</div>
+          <ol>
+            <li>Alice (100 notes)</li>
+            <li>Bob (87 notes)</li>
+            <li>Charlie (50 notes)</li>
+          </ol>
+        </div>
+        <div style="width: 90%">
+          <div style="font-size: 24px">Lyric</div>
+          <div id="lyricBox" style="padding: 8px; border: solid 1px; width: 100%; height: 300px; overflow: auto;"></div><br>
+          <center><button style="width: 100%" class="btn btn-success">Participate</button></center>
+        </div>
       </div>
       <div class="col-md-4">
         <div style="font-size: 24px">Song List</div>
