--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
     <link href="css/general.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body>
@@ -19,9 +20,24 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-    <div>
-      My Lyrics
-      My Contribution
+    <div style="padding: 14px">
+      <div class="col-sm-4" style="padding-top: 32px">
+        <div style="width: 90%; border: 1px solid">
+          <img id="profilePic" style="width: 100%;" src="./img/default-avatar.jpg" onerror="this.src = './img/default-avatar.jpg'">
+          <div style="font-size: 24px"><center id="profileId"></center></div>
+          <div><b>Total Contributions:</b> 1000 notes</div>
+          <div><b>Total Request:</b> 5 songs</div>
+          <div id="profileScore"></div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div style="font-size: 24px">My Requests</div>
+        <div id="myRequests" style="width: 90%; border: 1px solid; height: 500px; overflow: auto"></div>
+      </div>
+      <div class="col-sm-4">
+        <div style="font-size: 24px">My Contributions</div>
+        <div id="myContributions" style="width: 90%; border: 1px solid; height: 500px; overflow: auto"></div>
+      </div>
     </div>
 
     <div id="loginModal" class="modal">
@@ -41,5 +57,6 @@
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
+    <script src="scripts/profile.js"></script>
   </body>
 </html>
