background color changed

--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
-  <body>
+  <body style="background-color: #e1e1e1">
     <ul class="nav-ul">
       <li class="nav-li"><div style="font-family: 'Amita'; float: left; font-size: 20px; padding: 10px;">Melodize</div></li>
       <li class="nav-li"><a id="loginTab">Sign In</a></li>
@@ -32,11 +32,11 @@
       </div>
       <div class="col-sm-4">
         <div style="font-size: 24px">My Requests</div>
-        <div id="myRequests" style="width: 90%; border: 1px solid; height: 500px; overflow: auto"></div>
+        <div id="myRequests" style="width: 90%; border: 1px solid; height: 500px; overflow: auto; background-color: #efefef"></div>
       </div>
       <div class="col-sm-4">
         <div style="font-size: 24px">My Contributions</div>
-        <div id="myContributions" style="width: 90%; border: 1px solid; height: 500px; overflow: auto"></div>
+        <div id="myContributions" style="width: 90%; border: 1px solid; height: 500px; overflow: auto; background-color: #efefef"></div>
       </div>
     </div>
 
