--- a/songInfo.html
+++ b/songInfo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
-  <body>
+  <body style="background-color: #e1e1e1">
     <ul class="nav-ul">
       <li class="nav-li"><div style="font-family: 'Amita'; float: left; font-size: 20px; padding: 10px;">Melodize</div></li>
       <li class="nav-li"><a id="loginTab">Sign In</a></li>
@@ -33,6 +33,7 @@
         <div id="participantsInfo">Participants</div>
         </div>
       </div>
+
       <div class="col-md-4">
         <div style="padding-bottom: 14px">
           <div style="font-size: 24px">Preview</div>
@@ -50,13 +51,14 @@
         </div>
         <div style="width: 90%">
           <div style="font-size: 24px">Lyrics</div>
-          <div id="lyricBox" style="padding: 8px; border: solid 1px; width: 100%; height: 300px; overflow: auto;"></div><br>
+          <div id="lyricBox" style="padding: 8px; border: solid 1px; width: 100%; height: 300px; overflow: auto; background-color: #efefef"></div><br>
           <center><button style="width: 100%" class="btn btn-success" id="joinBtn">Join</button></center>
         </div>
       </div>
+
       <div class="col-md-4">
         <div style="font-size: 24px">Song List</div>
-        <div id="songList" style="border: solid 1px; width: 100%; height: 525px; overflow: auto"></div>
+        <div id="songList" style="border: solid 1px; width: 100%; height: 525px; overflow: auto; background-color: #efefef"></div>
       </div>
     </div>
  
