compose page started

--- a/profile.html
+++ b/profile.html
@@ -25,9 +25,9 @@
         <div style="width: 90%; border: 1px solid">
           <img id="profilePic" style="width: 100%;" src="./img/default-avatar.jpg" onerror="this.src = './img/default-avatar.jpg'">
           <div style="font-size: 24px"><center id="profileId"></center></div>
-          <div><b>Total Contributions:</b> 1000 notes</div>
-          <div><b>Total Request:</b> 5 songs</div>
-          <div id="profileScore"></div>
+          <div><b>Contributions:</b> 1000 notes</div>
+          <div id="profileRequestNum"><b>Requests:</b></div>
+          <div id="profileScore"><b>Score:</b></div>
         </div>
       </div>
       <div class="col-sm-4">
