--- a/compose.html
+++ b/compose.html
@@ -18,7 +18,29 @@
       <li class="nav-li"><a href="./gallery.html">Gallery</a></li>
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
- 
+
+    <div class="container">
+      <div class="row" style="padding-bottom: 14px; padding-top: 14px">
+        <div class="col-sm-4">
+          <img id="composeAlbum" style="width: 100%;" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
+        </div>
+        <div class="col-sm-8">
+          <div id="composeTitle" style="font-size: 24px"><b>Title</b></div>
+          <div id="composeDescription"><b>Description:</b></div>
+          <div id="composePreferrence"><b>Preferrence:</b></div>
+          <div id="composeParticipants"><b>Participants:</b></div>
+        </div>
+      </div>
+
+      <div class="row" style="padding-bottom: 14px">
+        <div style="border: 1px solid; width: 100%; height: 300px; overflow: auto; background-color: white;"></div>
+      </div>
+
+      <div class="row" style="padding-bottom: 24px">
+        <button style="width: 200px" class="btn btn-success">Submit</button>
+      </div>
+    </div>
+
     <div id="loginModal" class="modal">
       <div class="modal-content" style="width: 340px; height: 500px">
         <span class="close">&times;</span>
@@ -36,5 +58,6 @@
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
+    <script src="scripts/compose.js"></script>
   </body>
 </html>
