--- a/compose.html
+++ b/compose.html
@@ -33,7 +33,8 @@
       </div>
 
       <div class="row" style="padding-bottom: 14px">
-        <div style="border: 1px solid; width: 100%; height: 300px; overflow: auto; background-color: white;"></div>
+        <div id="score" style="border: 1px solid; width: 100%; height: 350px; overflow: auto; background-color: white; white-space: nowrap;">
+        </div>
       </div>
 
       <div class="row" style="padding-bottom: 24px">
