compose sound included

--- a/compose.html
+++ b/compose.html
@@ -6,6 +6,7 @@
     <title>Melodize - Composing</title>
     <link href="scripts/jquery/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet"/>
+    <link href="css/compose.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
   </head>
@@ -29,6 +30,10 @@
           <div id="composeDescription"><b>Description:</b></div>
           <div id="composePreferrence"><b>Preferrence:</b></div>
           <div id="composeParticipants"><b>Participants:</b></div>
+          <br>
+          <input id="from" style="width: 50px" type="text" placeholder="from" value="0">
+          <input id="to" style="width: 50px" type="text" placeholder="to" value="10">
+          <button id="playSong">Play</button>
         </div>
       </div>
 
