--- a/compose.html
+++ b/compose.html
@@ -60,6 +60,14 @@
       </div>
     </div>
 
+    <audio id="do" preload="auto"><source src="./sounds/do.wav" type="audio/wav"></audio>
+    <audio id="rae" preload="auto"><source src="./sounds/rae.wav" type="audio/wav"></audio>
+    <audio id="mi" preload="auto"><source src="./sounds/mi.wav" type="audio/wav"></audio>
+    <audio id="fa" preload="auto"><source src="./sounds/fa.wav" type="audio/wav"></audio>
+    <audio id="sol" preload="auto"><source src="./sounds/sol.wav" type="audio/wav"></audio>
+    <audio id="ra" preload="auto"><source src="./sounds/ra.wav" type="audio/wav"></audio>
+    <audio id="si" preload="auto"><source src="./sounds/si.wav" type="audio/wav"></audio>
+
     <script src="scripts/jquery/js/jquery-1.9.0.min.js"></script>
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
