--- a/compose.html
+++ b/compose.html
@@ -60,13 +60,13 @@
       </div>
     </div>
 
-    <audio id="do" preload="auto" autoplay><source src="./sounds/do.wav" type="audio/wav"></audio>
-    <audio id="rae" preload="auto" autoplay><source src="./sounds/rae.wav" type="audio/wav"></audio>
-    <audio id="mi" preload="auto" autoplay><source src="./sounds/mi.wav" type="audio/wav"></audio>
-    <audio id="fa" preload="auto" autoplay><source src="./sounds/fa.wav" type="audio/wav"></audio>
-    <audio id="sol" preload="auto" autoplay><source src="./sounds/sol.wav" type="audio/wav"></audio>
-    <audio id="ra" preload="auto" autoplay><source src="./sounds/ra.wav" type="audio/wav"></audio>
-    <audio id="si" preload="auto" autoplay><source src="./sounds/si.wav" type="audio/wav"></audio>
+    <audio id="do" preload="auto"><source src="https://melodize.github.io/sounds/do.wav" type="audio/wav"></audio>
+    <audio id="rae" preload="auto"><source src="https://melodize.github.io/sounds/rae.wav" type="audio/wav"></audio>
+    <audio id="mi" preload="auto"><source src="https://melodize.github.io/sounds/mi.wav" type="audio/wav"></audio>
+    <audio id="fa" preload="auto"><source src="https://melodize.github.io/sounds/fa.wav" type="audio/wav"></audio>
+    <audio id="sol" preload="auto"><source src="https://melodize.github.io/sounds/sol.wav" type="audio/wav"></audio>
+    <audio id="ra" preload="auto"><source src="https://melodize.github.io/sounds/ra.wav" type="audio/wav"></audio>
+    <audio id="si" preload="auto"><source src=".https://melodize.github.io/sounds/si.wav" type="audio/wav"></audio>
 
     <script src="scripts/jquery/js/jquery-1.9.0.min.js"></script>
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
