--- a/compose.html
+++ b/compose.html
@@ -38,12 +38,12 @@
       </div>
 
       <div class="row" style="padding-bottom: 14px">
-        <div id="score" style="border: 1px solid; width: 100%; height: 350px; overflow: auto; background-color: white; white-space: nowrap;">
+        <div id="score" style="border: 1px solid; width: 100%; height: 400px; overflow: auto; background-color: white; white-space: nowrap;">
         </div>
       </div>
 
       <div class="row" style="padding-bottom: 24px">
-        <button style="width: 200px" class="btn btn-success">Submit</button>
+        <button id="submitBtn" style="width: 200px" class="btn btn-success">Submit</button>
       </div>
     </div>
 
