--- a/compose.html
+++ b/compose.html
@@ -33,7 +33,9 @@
           <br>
           <input id="from" style="width: 50px" type="text" placeholder="from" value="0">
           <input id="to" style="width: 50px" type="text" placeholder="to" value="10">
-          <button id="playSong">Play</button>
+          <button id="playSong">Play</button><br>
+          <input id="submitFrom" style="width: 50px" type="text" placeholder="from" value="0">
+          <input id="submitTo" style="width: 50px" type="text" placeholder="to" value="10">
         </div>
       </div>
 
