--- a/checkProgress.html
+++ b/checkProgress.html
@@ -30,13 +30,15 @@
           <div id="composeDescription"><b>Description:</b></div>
           <div id="composePreferrence"><b>Preferrence:</b></div>
           <div id="composeParticipants"><b>Participants:</b></div>
+          <div><b>Progress: </b>20% completed<br>
+            <progress value="20" max="100"></div>
           <br>
-          <button id="playSong">Play</button><br>
+          <button class="btn btn-default" id="playSong">Play</button><br>
         </div>
       </div>
 
       <div class="row" style="padding-bottom: 14px">
-        <div id="score" style="border: 1px solid; width: 100%; height: 400px; overflow: auto; background-color: white; white-space: nowrap;">
+        <div id="score" style="border: 1px solid; width: 100%; height: 410px; overflow: auto; background-color: white; white-space: nowrap;">
         </div>
       </div>
     </div>
