--- a/songInfo.html
+++ b/songInfo.html
@@ -51,14 +51,14 @@
         </div>
         <div style="width: 90%">
           <div style="font-size: 24px">Lyrics</div>
-          <div id="lyricBox" style="padding: 8px; border: solid 1px; width: 100%; height: 300px; overflow: auto; background-color: #efefef"></div><br>
+          <div id="lyricBox" style="padding: 8px; width: 100%; height: 300px; overflow: auto; background-color: #efefef"></div><br>
           <center><button style="width: 100%" class="btn btn-success" id="joinBtn">Join</button></center>
         </div>
       </div>
 
       <div class="col-md-4">
         <div style="font-size: 24px">Song List</div>
-        <div id="songList" style="border: solid 1px; width: 100%; height: 525px; overflow: auto; background-color: #efefef"></div>
+        <div id="songList" style="width: 100%; height: 525px; overflow: auto; background-color: #efefef"></div>
       </div>
     </div>
  
