private room creation available

--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
 
     <div style="padding: 14px">
       <div class="col-sm-4" style="padding-top: 32px">
-        <div style="width: 90%; border: 1px solid">
+        <div style="width: 90%; height: 500px; background-color: #efefef; padding: 14px">
           <img id="profilePic" style="width: 100%;" src="./img/default-avatar.jpg" onerror="this.src = './img/default-avatar.jpg'">
           <div style="font-size: 24px"><center id="profileId"></center></div>
           <div><b>Contributions:</b> 1000 notes</div>
@@ -32,11 +32,11 @@
       </div>
       <div class="col-sm-4">
         <div style="font-size: 24px">My Requests</div>
-        <div id="myRequests" style="width: 90%; border: 1px solid; height: 500px; overflow: auto; background-color: #efefef"></div>
+        <div id="myRequests" style="width: 90%; height: 500px; overflow: auto; background-color: #efefef"></div>
       </div>
       <div class="col-sm-4">
         <div style="font-size: 24px">My Contributions</div>
-        <div id="myContributions" style="width: 90%; border: 1px solid; height: 500px; overflow: auto; background-color: #efefef"></div>
+        <div id="myContributions" style="width: 90%; height: 500px; overflow: auto; background-color: #efefef"></div>
       </div>
     </div>
 
