loading + partial completion

--- a/checkProgress.html
+++ b/checkProgress.html
@@ -20,7 +20,9 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-    <div class="container">
+    <div id="loader"></div>
+
+    <div id="mainDiv" style="display: none" class="animate-bottom container">
       <div class="row" style="padding-bottom: 14px; padding-top: 14px">
         <div class="col-sm-4">
           <img id="composeAlbum" style="width: 100%;" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
