--- a/request.html
+++ b/request.html
@@ -19,7 +19,7 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
  
-    <div style="padding: 14px; font-size: 18px">
+    <div style="padding: 14px; font-size: 18px" class="animate-bottom">
       <div class="col-sm-4" id="lyricsFeedback">
         <h3>1. Enter your lyrics.</h3>
         <textarea class="form-control" style="width: 100%" rows=25 placeholder="Your lyrics here" id="lyrics"></textarea>
