--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-    <div>
+    <div class="animate-bottom">
       <div style="margin: 0 auto; width: 60%;">
         <div class="login-div" style="font-family: 'Amita'; font-size: 24px; padding: 30px">Sign up</div>
         <div class="login-div"><input class="login-input" type="text" id="signupId" placeholder="New ID"></div>
