--- a/songInfo.html
+++ b/songInfo.html
@@ -20,7 +20,9 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-    <div style="padding: 14px">
+    <div id="loader"></div>
+
+    <div id="mainDiv" style="padding: 14px; display: none;" class="animate-bottom">
       <div class="col-md-4">
         <div style="padding: 14px">
         <img id="albumCover" style="width: 100%; object-fit: cover;" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
