--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,9 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-    <div style="padding: 14px">
+    <div id="loader"></div>
+
+    <div id="mainDiv" style="display: none; padding: 14px" class="animate-bottom">
       <div class="col-sm-4" style="padding-top: 32px">
         <div style="width: 90%; height: 500px; background-color: #efefef; padding: 14px">
           <img id="profilePic" style="width: 100%;" src="./img/default-avatar.jpg" onerror="this.src = './img/default-avatar.jpg'">
