--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,28 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
  
+    <div id="loader"></div>
+
+    <div id="mainDiv" class="animate-bottom container">
+      <div>
+        Total Users
+        Song Requests
+        Song Completed
+      </div>
+      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
+        <div style="height: 100%; width: 100%; border: solid 1px; background-color: #d1d1d1"></div>
+      </div>
+      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
+        <div style="height: 100%; width: 100%; border: solid 1px;"></div>
+      </div>
+      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
+        <div style="height: 100%; width: 100%; border: solid 1px;"></div>
+      </div>
+      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
+        <div style="height: 100%; width: 100%; border: solid 1px;"></div>
+      </div>
+    </div>
+
     <div id="loginModal" class="modal">
       <div class="modal-content" style="width: 340px; height: 500px">
         <span class="close">&times;</span>
