--- a/profile.html
+++ b/profile.html
@@ -27,9 +27,9 @@
         <div style="width: 90%; height: 500px; background-color: #efefef; padding: 14px">
           <img id="profilePic" style="width: 100%;" src="./img/default-avatar.jpg" onerror="this.src = './img/default-avatar.jpg'">
           <div style="font-size: 24px"><center id="profileId"></center></div>
-          <div id="contributions"><b>Contributions:</b> notes</div>
-          <div id="profileRequestNum"><b>Requests:</b> songs</div>
-          <div id="profileScore"><b>Score:</b> pt</div>
+          <div id="contributions"><b>Contributions:</b> 0 notes</div>
+          <div id="profileRequestNum"><b>Requests:</b> 0 songs</div>
+          <div id="profileScore"><b>Score:</b> 0 pt</div>
         </div>
       </div>
       <div class="col-sm-4">
