--- a/request.html
+++ b/request.html
@@ -52,8 +52,8 @@
           <input class="form-control" id="description" type="textarea" style="width: 80%" placeholder="Describe your purpose, intuition, etc.">
         </div>
         <div style="padding-bottom: 20px">
-          <h3>6. Preferred mood/tone</h3>
-          <input class="form-control" id="preferrence" type="textarea" style="width: 80%" placeholder="Describe the song you want">
+          <h3>6. Prefered mood/tone</h3>
+          <input class="form-control" id="preference" type="textarea" style="width: 80%" placeholder="Describe the song you want">
         </div>
         <div style="padding-bottom: 20px">
           <h3>7. Setting</h3>
