--- a/songInfo.html
+++ b/songInfo.html
@@ -30,18 +30,19 @@
           <div id="titleInfo" style="font-size: 24px;">Title</div>
           <div id="descriptionInfo">Description</div>
         </div>
-        <div id="instrumentInfo">Instrument</div>
-        <div id="preferrenceInfo">Preferrence</div>
-        <div id="participantsInfo">Participants</div>
+        <div id="instrumentInfo">Instrument: </div>
+        <div id="preferenceInfo">Requester's remark:  </div>
+        <div id="participantsInfo">No. of participants: </div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div style="padding-bottom: 14px">
           <div style="font-size: 24px">Preview</div>
-          <button style="width: 30px; height: 30px">&#9658</button>
-          <button style="width: 30px; height: 30px">&#10073&#10073</button>
-          <button style="width: 30px; height: 30px">&#9726</button> (00:50 sec)
+          <button id="playSong" style="width: 30px; height: 30px">&#9658</button>
+          <!--<button style="width: 30px; height: 30px">&#10073&#10073</button>-->
+          <button id="stopSong" style="width: 30px; height: 30px">&#9726</button>
+          <div id="songLength">(0 sec)</div>
         </div>
         <div>
           <div style="font-size: 24px">Top 3 Contributors</div>
