--- a/compose.html
+++ b/compose.html
@@ -30,7 +30,7 @@
         <div class="col-sm-8">
           <div id="composeTitle" style="font-size: 24px"><b>Title</b></div>
           <div id="composeDescription"><b>Description:</b></div>
-          <div id="composePreferrence"><b>Preferrence:</b></div>
+          <div id="composePreference"><b>Preference:</b></div>
           <div id="composeParticipants"><b>Participants:</b></div>
           <br>
           <input id="from" style="width: 50px" type="text" placeholder="from" value="0">
