--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <title>Melodize - Gallery</title>
     <link href="scripts/jquery/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet"/>
+    <link href="css/gallery.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
   </head>
@@ -22,23 +23,34 @@
     <div id="loader"></div>
 
     <div id="mainDiv" class="animate-bottom container">
-      <div>
-        Total Users
-        Song Requests
-        Song Completed
+      <div class="statBoard">
+        <h2>Total Users</h2>
+        <h2> Requests</h2>
+        <h2> Completed</h2>
       </div>
-      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
-        <div style="height: 100%; width: 100%; border: solid 1px; background-color: #d1d1d1"></div>
+
+      <div class="outBox">
+        <div class="inBox">
+          <div class="imgFrame">
+            <img onerror="this.src ='./img/default-cover-art.png'" src="">
+          </div>
+          <div>Title</div>
+          <div>Play</div>
+        </div>
       </div>
-      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
-        <div style="height: 100%; width: 100%; border: solid 1px;"></div>
+
+      <div class="outBox">
+        <div class="inBox">
+          <div class="imgFrame">
+            <img onerror="this.src ='./img/default-cover-art.png'" src="">
+          </div>
+          <div>Title</div>
+          <div>Play</div>
+        </div>
       </div>
-      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
-        <div style="height: 100%; width: 100%; border: solid 1px;"></div>
-      </div>
-      <div style="padding: 14px; height: 300px; width: 300px; display: inline-block;">
-        <div style="height: 100%; width: 100%; border: solid 1px;"></div>
-      </div>
+
+
+
     </div>
 
     <div id="loginModal" class="modal">
