progress bar + window working

--- a/checkProgress.html
+++ b/checkProgress.html
@@ -30,12 +30,12 @@
         <div class="col-sm-8">
           <div id="composeTitle" style="font-size: 24px"><b>Title</b></div>
           <div id="composeDescription"><b>Description:</b></div>
-          <div id="composePreferrence"><b>Preferrence:</b></div>
+          <div id="composePreference"><b>Preference:</b></div>
           <div id="composeParticipants"><b>Participants:</b></div>
-          <div><b>Progress: </b>20% completed<br>
-            <progress value="20" max="100"></div>
-          <br>
-          <button class="btn btn-default" id="playSong">Play</button><br>
+          <div id="progressText"><b>Progress: </b>0% completed<br></div>
+          <progress id="progressBar" value="20" max="100"></progress><br>            
+          <button class="btn btn-default" id="playSong">Play</button> 
+          <button class="btn btn-default" id="stopSong">Stop</button>
         </div>
       </div>
 
