--- a/gallery.html
+++ b/gallery.html
@@ -22,9 +22,9 @@
 
     <div id="mainDiv" class="animate-bottom container">
       <div class="statBoard">
-        <h2>Total Users: </h2>
-        <h2> Requests: </h2>
-        <h2> Completed: </h2>
+        <div class="title">Total Users: </div><div class="info" id="totalUsers">0 users</div>
+        <div class="title">Requests: </div><div class="info" id="requests">0 lyrics</div>
+        <div class="title">Completed: </div><div class="info" id="completed"> 0 songs</div>
       </div>
 
       <div id="board"></div>
