profile pic change enabled

--- a/checkProgress.html
+++ b/checkProgress.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="row" style="padding-bottom: 14px">
-        <div id="score" style="border: 1px solid; width: 100%; height: 410px; overflow: auto; background-color: white; white-space: nowrap;">
+        <div id="score" style="width: 100%; height: 410px; overflow: auto; background-color: white; white-space: nowrap;">
         </div>
       </div>
     </div>
