--- a/request.html
+++ b/request.html
@@ -29,9 +29,9 @@
           <h3>2. Select the instrument.</h3>
           <form id="instrument">
             <input type="radio" name="instrument" value="piano" checked> Piano<br>
-            <input type="radio" name="instrument" value="piano"> Violin<br>
-            <input type="radio" name="instrument" value="piano"> Flute<br>
-            <input type="radio" name="instrument" value="piano"> Guitar<br>
+            <input type="radio" name="instrument" value="piano" disabled> Violin<br>
+            <input type="radio" name="instrument" value="piano" disabled> Flute<br>
+            <input type="radio" name="instrument" value="piano" disabled> Guitar<br>
           </form>
         </div>
         <div style="padding-bottom: 20px">
