--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,9 @@
       <li class="nav-li"><a href="./index.html">Home</a></li>
     </ul>
 
-    <div id="mainDiv" class="animate-bottom container">
+    <dir id="loader"></dir>
+
+    <div id="mainDiv" style="display: none;" class="animate-bottom container">
       <div class="statBoard">
         <div class="title">Total Users: </div><div class="info" id="totalUsers">0 users</div>
         <div class="title">Requests: </div><div class="info" id="requests">0 lyrics</div>
